psao-artifact/data/runs/cluster-backup-2026-09-13T11-35-52Z/raw/destinationrule.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: DestinationRule
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1","kind":"DestinationRule","metadata":{"name":"default-mtls","namespace":"default"},"spec":{"host":"*.default.svc.cluster.local","trafficPolicy":{"tls":{"mode":"ISTIO_MUTUAL"}}}}
    creationTimestamp: "2026-09-13T11:30:32Z"
    generation: 1
    name: default-mtls
    namespace: default
    resourceVersion: "476213"
    uid: 7cbe7f3a-9064-4e52-ab80-77f465514c08
  spec:
    host: '*.default.svc.cluster.local'
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
kind: List
metadata:
  resourceVersion: ""
