psao-artifact/data/runs/cluster-backup-2026-09-13T11-35-52Z/raw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/service-upstream":"true"},"name":"my-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"localhost","http":{"paths":[{"backend":{"service":{"name":"service-a","port":{"number":80}}},"path":"/products","pathType":"Prefix"},{"backend":{"service":{"name":"service-b","port":{"number":80}}},"path":"/reviews","pathType":"Prefix"}]}}],"tls":[{"hosts":["loc [...]
    nginx.ingress.kubernetes.io/service-upstream: "true"
  creationTimestamp: "2025-11-17T16:45:51Z"
  generation: 7
  name: my-ingress
  namespace: default
  resourceVersion: "476220"
  uid: f534f72f-217a-45de-bdb1-8a7339a0e1be
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: service-a
            port:
              number: 80
        path: /products
        pathType: Prefix
      - backend:
          service:
            name: service-b
            port:
              number: 80
        path: /reviews
        pathType: Prefix
  tls:
  - hosts:
    - localhost
    secretName: tls-secret
status:
  loadBalancer:
    ingress:
    - hostname: localhost
