psao-artifact/data/runs/cluster-backup-2026-09-13T11-35-52Z/raw/peerauthentication.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"security.istio.io/v1","kind":"PeerAuthentication","metadata":{"name":"default","namespace":"default"},"spec":{"mtls":{"mode":"STRICT"}}}
    creationTimestamp: "2026-09-13T11:30:32Z"
    generation: 1
    name: default
    namespace: default
    resourceVersion: "476209"
    uid: 0ad71177-2f79-41b1-805e-af9414bad5cf
  spec:
    mtls:
      mode: STRICT
kind: List
metadata:
  resourceVersion: ""
